<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_relative_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    tools:context="com.anuj.task1.FormLogin">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <EditText
                android:id="@+id/edt_firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_style"
                android:hint="@string/hint_first_name"
                android:inputType="textPersonName"
                android:maxLength="20"

                />

            <EditText
                android:id="@+id/edt_lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edt_firstname"
                android:layout_marginTop="@dimen/activity_top_margin"
                android:background="@drawable/edit_text_style"
                android:hint="@string/hint_last_name"
                android:inputType="textPersonName"
                android:maxLength="20" />

            <EditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edt_lastname"
                android:layout_marginTop="@dimen/activity_top_margin"
                android:background="@drawable/edit_text_style"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:maxLength="50" />

            <EditText
                android:id="@+id/edt_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edt_email"
                android:layout_marginTop="@dimen/activity_top_margin"
                android:background="@drawable/edit_text_style"
                android:hint="@string/hint_phone"
                android:inputType="phone"
                android:maxLength="11" />


            <TextView
                android:id="@+id/txt_genderText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/edt_phone"
                android:layout_marginTop="@dimen/activity_top_margin"
                android:text="@string/gender_txtview"
                android:textColor="@color/text_color"
                android:textSize="@dimen/txt_text_size"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/rdgrp_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_genderText"
                android:layout_marginTop="@dimen/activity_top_margin"
                android:orientation="horizontal">


                <RadioButton
                    android:id="@+id/radio_gender_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/gender_male"

                    android:textColor="@color/text_color"
                    android:textSize="@dimen/radio_text_size" />

                <RadioButton
                    android:id="@+id/radio_gender_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_left_margin"
                    android:text="@string/gender_female"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/radio_text_size" />
            </RadioGroup>

            <EditText
                android:id="@+id/edt_street"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rdgrp_gender"
                android:layout_marginTop="@dimen/activity_top_margin"
                android:background="@drawable/edit_text_style"
                android:hint="@string/hint_street"
                android:inputType="textMultiLine"
                android:maxLength="50"
                android:maxLines="2" />

            <Spinner
                android:id="@+id/spinner_countries_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edt_street"
                android:layout_marginTop="@dimen/activity_top_margin"
                android:padding="@dimen/padding_allsides"
                android:prompt="@string/spinner_country_prompt">


            </Spinner>

            <Spinner
                android:id="@+id/spinner_states_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/spinner_countries_main"
                android:layout_marginTop="@dimen/activity_top_margin"
                android:padding="@dimen/padding_allsides">

            </Spinner>

            <TextView
                android:id="@+id/txt_hobbiesText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/spinner_states_main"
                android:layout_marginTop="@dimen/activity_top_margin"
                android:text="@string/hobbies_txtview"
                android:textColor="@color/text_color"
                android:textSize="@dimen/txt_text_size"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/linear_layout1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_hobbiesText"
                android:layout_marginTop="@dimen/activity_top_margin"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/chkbox_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chkbox_tv_option"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/chkbox_text_size" />

                <CheckBox
                    android:id="@+id/chkbox_games"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chkbox_videogames_option"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/chkbox_text_size" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/linear_layout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_hobbiesText"
                android:layout_marginLeft="@dimen/activity_left_margin"
                android:layout_marginTop="@dimen/activity_top_margin"
                android:layout_toRightOf="@id/linear_layout1"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/chkbox_books"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chkbox_readbooks_option"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/chkbox_text_size" />

                <CheckBox
                    android:id="@+id/chkbox_stamps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chkbox_collectstamp_option"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/chkbox_text_size" />
            </LinearLayout>


            <CheckBox
                android:id="@+id/chkbox_termsandconditions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/linear_layout1"
                android:layout_marginTop="@dimen/activity_top_margin"
                android:text="@string/chkbox_termsandconditions"
                android:textColor="@color/text_color"
                android:textSize="@dimen/chkbox_text_size" />

            <Button
                android:id="@+id/btn_save"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_below="@id/chkbox_termsandconditions"
                android:layout_centerInParent="true"
                android:layout_marginTop="@dimen/activity_top_margin"
                android:background="@drawable/button_shape"
                android:text="@string/btn_text" />
        </RelativeLayout>
    </ScrollView>


</RelativeLayout>
